# flash

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  main.jsx  style.css
src-tauri/: Cargo.toml  flash.config.json  tauri.conf.json
src-tauri/config/: flash.config.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs
src/api/: collocate.js  shields.js  test.js  translate.js  user.js
src/components/AppSlection/: index.css  index.jsx
src/components/Dialog/: index.css  index.jsx
src/components/DropdownMenu/: index.css  index.jsx
src/components/EditableTxt/: index.css  index.jsx
src/components/FlashInput/: index.css  index.jsx
src/components/Loading/: index.css  index.jsx
src/components/MsgTipTxt/: index.jsx
src/components/PopoverPicker/: index.css  index.jsx  useClickOutside.js
src/icon/: iconfont.css
src/pages/: pageRoutes.jsx
src/pages/Aes/: index.css  index.jsx
src/pages/Base64/: index.css  index.jsx
src/pages/Cae/: index.css  index.jsx
src/pages/Cmd/: index.jsx
src/pages/Color/: index.css  index.jsx
src/pages/Crypt/: index.jsx
src/pages/Default/: index.jsx
src/pages/Des/: index.css  index.jsx
src/pages/Html/: index.css  index.jsx
src/pages/Json/: index.css  index.jsx
src/pages/Login/: index.css  index.jsx
src/pages/Md5/: index.css  index.jsx
src/pages/Mock/: index.jsx
src/pages/Option/: index.css  index.jsx
src/pages/PersonalSetting/: index.css  index.jsx
src/store/: index.jsx
src/utils/: api.js  axios.js  base64.js  command.js  date.js  db.js  flash.js
(+61 files in other folders)
